test/tests/stages/18_structures/invalid_struct_tags/member_type_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  struct
  identifier(s)
  {
  struct
  identifier(a)
  identifier(b)
  ;
  }
  ;
